Projeto de Compiladores/ProjetoAntlr/target/generated-sources/antlr4/isiParser.java
// Generated from isi.g4 by ANTLR 4.4

	import language.datastructures.isiSymbol;
	import language.datastructures.isiSymbolTable;
	import language.datastructures.isiVariable;
	import language.exceptions.isiSemanticException;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class isiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__13=1, T__12=2, T__11=3, T__10=4, T__9=5, T__8=6, T__7=7, T__6=8, T__5=9, 
		T__4=10, T__3=11, T__2=12, T__1=13, T__0=14, AP=15, FP=16, AC=17, FC=18, 
		ACO=19, FCO=20, ATT=21, SC=22, CM=23, OP=24, OPM=25, OPL=26, OPR=27, OA=28, 
		ACOM=29, FCOM=30, AS=31, TRUE=32, FALSE=33, ID=34, NUMBER=35, BLANK=36;
	public static final String[] tokenNames = {
		"<INVALID>", "'char'", "'main(){'", "'return'", "'float'", "'scanf'", 
		"'while'", "'void'", "'for'", "'bool'", "'if'", "'printf'", "'double'", 
		"'int'", "'else'", "'('", "')'", "'{'", "'}'", "'['", "']'", "'='", "';'", 
		"','", "OP", "'++'", "'--'", "OPR", "OA", "'/*'", "'*/'", "'\\u0027'", 
		"'true'", "'false'", "ID", "NUMBER", "BLANK"
	};
	public static final int
		RULE_program = 0, RULE_start = 1, RULE_decl = 2, RULE_declareVar = 3, 
		RULE_declareNum = 4, RULE_declareChar = 5, RULE_number = 6, RULE_block = 7, 
		RULE_cmd = 8, RULE_cmdComm = 9, RULE_cmdRead = 10, RULE_cmdWrite = 11, 
		RULE_cmdAtt = 12, RULE_cmdCond = 13, RULE_cmdBool = 14, RULE_cmdFor = 15, 
		RULE_cmdWhile = 16, RULE_cmdRet = 17, RULE_cmdMM = 18, RULE_cmdLL = 19, 
		RULE_cmdChar = 20, RULE_cmdFunc = 21, RULE_expr = 22, RULE_term = 23;
	public static final String[] ruleNames = {
		"program", "start", "decl", "declareVar", "declareNum", "declareChar", 
		"number", "block", "cmd", "cmdComm", "cmdRead", "cmdWrite", "cmdAtt", 
		"cmdCond", "cmdBool", "cmdFor", "cmdWhile", "cmdRet", "cmdMM", "cmdLL", 
		"cmdChar", "cmdFunc", "expr", "term"
	};

	@Override
	public String getGrammarFileName() { return "isi.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


		private int _type;
		private String _varName;
		private String _varValue;
		private isiSymbolTable symbolTable = new isiSymbolTable();
		private isiSymbol symbol;
		
		// fun��o verifica se o ID existe na tabela
		public void verifyId(String id){
			if(!symbolTable.exists(id)){
				throw new isiSemanticException("SYMBOL "+_varName+" NAO DECLARADO");
			}
		}
		
		// cria um novo symbol, atribui e adiciona o token na tabela de symbols 
		public void createId(String id){
			_varValue = null;
			symbol = new isiVariable(_varName, _type, _varValue);
			if(!symbolTable.exists(_varName)){
				symbolTable.add(symbol);
			}else{
				throw new isiSemanticException("SYMBOL "+_varName+" JA DECLARADO");
			}
		}

	public isiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public DeclContext decl() {
			return getRuleContext(DeclContext.class,0);
		}
		public StartContext start() {
			return getRuleContext(StartContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); start();
			setState(49); match(T__12);
			setState(50); decl();
			setState(51); block();
			setState(52); match(FC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartContext extends ParserRuleContext {
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_la = _input.LA(1);
			if ( !(_la==T__7 || _la==T__1) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public List<DeclareVarContext> declareVar() {
			return getRuleContexts(DeclareVarContext.class);
		}
		public DeclareVarContext declareVar(int i) {
			return getRuleContext(DeclareVarContext.class,i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitDecl(this);
		}
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(56); declareVar();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(59); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareVarContext extends ParserRuleContext {
		public DeclareNumContext declareNum() {
			return getRuleContext(DeclareNumContext.class,0);
		}
		public DeclareCharContext declareChar() {
			return getRuleContext(DeclareCharContext.class,0);
		}
		public CmdContext cmd() {
			return getRuleContext(CmdContext.class,0);
		}
		public DeclareVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterDeclareVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitDeclareVar(this);
		}
	}

	public final DeclareVarContext declareVar() throws RecognitionException {
		DeclareVarContext _localctx = new DeclareVarContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declareVar);
		try {
			setState(64);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61); declareNum();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(62); declareChar();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(63); cmd();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareNumContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(isiParser.ID); }
		public TerminalNode CM(int i) {
			return getToken(isiParser.CM, i);
		}
		public TerminalNode ID(int i) {
			return getToken(isiParser.ID, i);
		}
		public List<TerminalNode> CM() { return getTokens(isiParser.CM); }
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public DeclareNumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareNum; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterDeclareNum(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitDeclareNum(this);
		}
	}

	public final DeclareNumContext declareNum() throws RecognitionException {
		DeclareNumContext _localctx = new DeclareNumContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declareNum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66); number();
			setState(67); match(ID);
			 createId(_varName = _input.LT(-1).getText());
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CM) {
				{
				{
				setState(69); match(CM);
				setState(70); match(ID);
				 createId(_varName = _input.LT(-1).getText());
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77); match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclareCharContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(isiParser.ID, 0); }
		public TerminalNode FCO() { return getToken(isiParser.FCO, 0); }
		public TerminalNode ACO() { return getToken(isiParser.ACO, 0); }
		public TerminalNode NUMBER() { return getToken(isiParser.NUMBER, 0); }
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public DeclareCharContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareChar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterDeclareChar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitDeclareChar(this);
		}
	}

	public final DeclareCharContext declareChar() throws RecognitionException {
		DeclareCharContext _localctx = new DeclareCharContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declareChar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(T__13);
			 _type = isiVariable.STRING;   
			setState(81); match(ID);
			 createId(_varName = _input.LT(-1).getText());
			setState(83); match(ACO);
			setState(84); match(NUMBER);
			setState(85); match(FCO);
			setState(86); match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberContext extends ParserRuleContext {
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__10) | (1L << T__2) | (1L << T__1))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(90); cmd();
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__11) | (1L << T__10) | (1L << T__9) | (1L << T__8) | (1L << T__6) | (1L << T__5) | (1L << T__4) | (1L << T__3) | (1L << T__2) | (1L << T__1) | (1L << ACOM) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdContext extends ParserRuleContext {
		public CmdLLContext cmdLL() {
			return getRuleContext(CmdLLContext.class,0);
		}
		public CmdCommContext cmdComm() {
			return getRuleContext(CmdCommContext.class,0);
		}
		public CmdForContext cmdFor() {
			return getRuleContext(CmdForContext.class,0);
		}
		public CmdCharContext cmdChar() {
			return getRuleContext(CmdCharContext.class,0);
		}
		public CmdWriteContext cmdWrite() {
			return getRuleContext(CmdWriteContext.class,0);
		}
		public CmdCondContext cmdCond() {
			return getRuleContext(CmdCondContext.class,0);
		}
		public CmdWhileContext cmdWhile() {
			return getRuleContext(CmdWhileContext.class,0);
		}
		public CmdReadContext cmdRead() {
			return getRuleContext(CmdReadContext.class,0);
		}
		public CmdBoolContext cmdBool() {
			return getRuleContext(CmdBoolContext.class,0);
		}
		public CmdFuncContext cmdFunc() {
			return getRuleContext(CmdFuncContext.class,0);
		}
		public CmdAttContext cmdAtt() {
			return getRuleContext(CmdAttContext.class,0);
		}
		public CmdRetContext cmdRet() {
			return getRuleContext(CmdRetContext.class,0);
		}
		public CmdMMContext cmdMM() {
			return getRuleContext(CmdMMContext.class,0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmd(this);
		}
	}

	public final CmdContext cmd() throws RecognitionException {
		CmdContext _localctx = new CmdContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_cmd);
		try {
			setState(108);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95); cmdRead();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(96); cmdWrite();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(97); cmdAtt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(98); cmdCond();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(99); cmdBool();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(100); cmdFor();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(101); cmdWhile();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(102); cmdRet();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(103); cmdMM();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(104); cmdLL();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(105); cmdChar();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(106); cmdComm();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(107); cmdFunc();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdCommContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(isiParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(isiParser.ID, i);
		}
		public TerminalNode ACOM() { return getToken(isiParser.ACOM, 0); }
		public TerminalNode FCOM() { return getToken(isiParser.FCOM, 0); }
		public CmdCommContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdComm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmdComm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmdComm(this);
		}
	}

	public final CmdCommContext cmdComm() throws RecognitionException {
		CmdCommContext _localctx = new CmdCommContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_cmdComm);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(ACOM);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(111); match(ID);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117); match(FCOM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdReadContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(isiParser.ID, 0); }
		public TerminalNode AP() { return getToken(isiParser.AP, 0); }
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public TerminalNode FP() { return getToken(isiParser.FP, 0); }
		public CmdReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdRead; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmdRead(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmdRead(this);
		}
	}

	public final CmdReadContext cmdRead() throws RecognitionException {
		CmdReadContext _localctx = new CmdReadContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_cmdRead);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(T__9);
			setState(120); match(AP);
			setState(121); match(ID);
			 verifyId(_varName = _input.LT(-1).getText());
			setState(123); match(FP);
			setState(124); match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdWriteContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(isiParser.ID, 0); }
		public TerminalNode AP() { return getToken(isiParser.AP, 0); }
		public TerminalNode NUMBER() { return getToken(isiParser.NUMBER, 0); }
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public TerminalNode FP() { return getToken(isiParser.FP, 0); }
		public CmdWriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdWrite; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmdWrite(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmdWrite(this);
		}
	}

	public final CmdWriteContext cmdWrite() throws RecognitionException {
		CmdWriteContext _localctx = new CmdWriteContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_cmdWrite);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(T__3);
			setState(127); match(AP);
			setState(131);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(128); match(ID);
				 verifyId(_varName = _input.LT(-1).getText());
				}
				break;
			case NUMBER:
				{
				setState(130); match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(133); match(FP);
			setState(134); match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdAttContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(isiParser.ID, 0); }
		public TerminalNode ATT() { return getToken(isiParser.ATT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public CmdAttContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdAtt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmdAtt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmdAtt(this);
		}
	}

	public final CmdAttContext cmdAtt() throws RecognitionException {
		CmdAttContext _localctx = new CmdAttContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_cmdAtt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(ID);
			 verifyId(_varName = _input.LT(-1).getText());
			setState(138); match(ATT);
			setState(139); expr();
			setState(140); match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CmdCondContext extends ParserRuleContext {
		public TerminalNode AC(int i) {
			return getToken(isiParser.AC, i);
		}
		public TerminalNode FC(int i) {
			return getToken(isiParser.FC, i);
		}
		public TerminalNode OPR() { return getToken(isiParser.OPR, 0); }
		public TerminalNode ID(int i) {
			return getToken(isiParser.ID, i);
		}
		public TerminalNode SC() { return getToken(isiParser.SC, 0); }
		public TerminalNode FP() { return getToken(isiParser.FP, 0); }
		public List<CmdContext> cmd() {
			return getRuleContexts(CmdContext.class);
		}
		public List<TerminalNode> ID() { return getTokens(isiParser.ID); }
		public TerminalNode AP() { return getToken(isiParser.AP, 0); }
		public List<TerminalNode> FC() { return getTokens(isiParser.FC); }
		public List<TerminalNode> AC() { return getTokens(isiParser.AC); }
		public TerminalNode NUMBER() { return getToken(isiParser.NUMBER, 0); }
		public CmdContext cmd(int i) {
			return getRuleContext(CmdContext.class,i);
		}
		public CmdCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cmdCond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).enterCmdCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof isiListener ) ((isiListener)listener).exitCmdCond(this);
		}
	}

	public final CmdCondContext cmdCond() throws RecognitionException {
		CmdCondContext _localctx = new CmdCondContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_cmdCond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142); match(T__4);
			setState(143); match(AP);
			setState(144); match(ID);
			 verifyId(_varName = _input.LT(-1).getText());
			setState(146); match(OPR);
			setState(150);
			switch (_input.LA(1)) {
			case ID:
				{
				setState(147); match(ID);
